flux/infrastructure/micro/services/dns-monitor/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dns-monitor
  namespace: micro
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns.tools.becklab.cloud`)
      kind: Rule
      middlewares:
        - name: dns-monitor-role-chain
          namespace: identity
      services:
        - name: dns-monitor
          port: 80
          sticky: false
